<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside"
        android:src="@drawable/manchkin_logo"
        tools:srcCompat="@drawable/manchkin_logo" />

    <Button
        android:id="@+id/button_setting_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogMenuSettingText" />

    <Button
        android:id="@+id/button_exit_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogMenuExitText" />


</LinearLayout>