<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/manchkin_background"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLogin"
        android:fontFamily="@font/segoesc"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:ems="10"
        android:fontFamily="@font/segoesc"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtPassword1"
        android:fontFamily="@font/segoesc"
        android:textColor="@color/gray"
        android:textAlignment="center"
        android:text="@string/txtPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edtPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:ems="10"
        android:fontFamily="@font/segoesc"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/txtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoesc"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:text="@string/txtPassword2" />

    <EditText
        android:id="@+id/edtPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:ems="10"
        android:fontFamily="@font/segoesc"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/icon_central_button"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:fontFamily="@font/segoesc"
        android:onClick="clickBtnRegistr"
        android:text="@string/btnRegistr"
        android:textColorLink="@color/gray"
        android:textSize="19dp" />


    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>