<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inventory_background"
    tools:context=".Activity.InventoryActivity">

    <TextView
        android:id="@+id/char_hat"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/character_hat"
        android:fontFamily="@font/segoesc"
        android:paddingLeft="30dp"
        android:paddingTop="8dp"
        android:paddingRight="30dp"
        android:text="@string/char_hat"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/exitFromInventory" />

    <TextView
        android:id="@+id/list_hat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/character_hat"
        android:fontFamily="@font/segoesc"
        android:paddingStart="25dp"
        android:paddingTop="8dp"
        android:paddingEnd="10dp"
        android:text="@string/list_hat"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cbw_list"
        app:layout_constraintEnd_toEndOf="@+id/cbw_list"
        app:layout_constraintStart_toStartOf="@+id/cbw_list"
        app:layout_constraintTop_toTopOf="@+id/char_hat" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cbw_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/list"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_l_hand"
        app:layout_constraintTop_toTopOf="@id/constraintLayout2" />

    <ImageView
        android:id="@+id/exitFromInventory"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/exitFromInventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_2" />


    <LinearLayout
        android:id="@+id/ll_boots"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_for_item"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_body">

        <ImageView
            android:id="@+id/im_boots"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_for_item"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_head">

        <ImageView
            android:id="@+id/im_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/box_for_item"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/char_hat">

        <ImageView
            android:id="@+id/im_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_r_hand"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/box_for_item"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ll_boots"
        app:layout_constraintEnd_toStartOf="@+id/ll_body"
        app:layout_constraintTop_toTopOf="@+id/ll_body">

        <ImageView
            android:id="@+id/im_l_hand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_l_hand"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/box_for_item"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/ll_boots"
        app:layout_constraintStart_toEndOf="@+id/ll_body"
        app:layout_constraintTop_toTopOf="@+id/ll_body">

        <ImageView
            android:id="@+id/im_r_hand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@android:drawable/editbox_dropdown_dark_frame" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ll_r_hand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/char_hat"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tv_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoesc"
            android:text="Сила"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoesc"
            android:text="Уровень"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strength"
            app:layout_constraintTop_toBottomOf="@+id/tv_strength" />

        <TextView
            android:id="@+id/tv_race"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoesc"
            android:text="Раса"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strength"
            app:layout_constraintTop_toBottomOf="@+id/tv_level" />

        <TextView
            android:id="@+id/tv_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoesc"
            android:text="Класс"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strength"
            app:layout_constraintTop_toBottomOf="@+id/tv_race" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/segoesc"
            android:text="Пол"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_strength"
            app:layout_constraintTop_toBottomOf="@+id/tv_class" />

        <TextView
            android:id="@+id/tv_strengthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoesc"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_strength"
            app:layout_constraintEnd_toEndOf="@+id/tv_levelValue" />

        <TextView
            android:id="@+id/tv_levelValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/segoesc"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_level" />

        <TextView
            android:id="@+id/tv_raceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/segoesc"
            android:text="Человек"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_race"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_race" />

        <TextView
            android:id="@+id/tv_classType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/segoesc"
            android:text="N/A"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_class"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_class" />

        <TextView
            android:id="@+id/tv_sexType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/segoesc"
            android:text="Мужчина"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sex" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>